[package]
name = "rustboard"
version = "0.1.0"
authors = ["William Chargin <wchargin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
byteorder = "1.3.2"
serde = "1.0.99"
walkdir = "2.2.9"
