[package]
name = "rustboard"
version = "0.1.0"
authors = ["William Chargin <wchargin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.1.4"
actix-web = "1.0.7"
byteorder = "1.3.2"
clap = "2.33.0"
env_logger = "0.6.2"
log = "0.4.8"
rand = "0.7.0"
rand_chacha = "0.2.1"
serde = "1.0.99"
walkdir = "2.2.9"
